test/invalid/fc36956_TypeChecking_ArgsAndParmsSubtype/ToalhaDeMesa.plume
/**
 * ToalhaDeMesa.plume
 *
 * @author Carlos Mao de Ferro
 * @version $Id: ToalhaDeMesa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ToalhaDeMesa extends Toalha is

	method override temNodoas : (estaSuja : Boolean) -> Boolean is
		if estaSuja
		then true
		else false